HTML要素をJSで取得 #1

--- a/beginner/study/dom-practice/index.html
+++ b/beginner/study/dom-practice/index.html
@@ -30,5 +30,7 @@
       </div>
       <button id="js-btn" class="btn">クリック</button>
     </section>
+
+    <script src="./js/get-html.js"></script>
   </body>
 </html>
