HTML要素のテキストを書き換える #1

--- a/beginner/study/dom-practice/index.html
+++ b/beginner/study/dom-practice/index.html
@@ -31,6 +31,11 @@
       <button id="js-btn" class="btn">クリック</button>
     </section>
 
-    <script src="./js/get-html.js"></script>
+    <!-- <script src="./js/get-html.js">
+      HTML要素の取得
+    </script> -->
+    <script src="./js/get-html-use.js">
+      HTML要素の操作
+    </script>
   </body>
 </html>
