HTML要素の追加 #1

--- a/beginner/study/dom-practice/index.html
+++ b/beginner/study/dom-practice/index.html
@@ -34,8 +34,11 @@
     <!-- <script src="./js/get-html.js">
       HTML要素の取得
     </script> -->
-    <script src="./js/get-html-use.js">
+    <!-- <script src="./js/get-html-use.js">
       HTML要素の操作
+    </script> -->
+    <script src="./js/html-add.js">
+      HTML要素の追加
     </script>
   </body>
 </html>
