ボタンの操作 #1

--- a/beginner/study/dom-practice/index.html
+++ b/beginner/study/dom-practice/index.html
@@ -37,8 +37,11 @@
     <!-- <script src="./js/get-html-use.js">
       HTML要素の操作
     </script> -->
-    <script src="./js/html-add.js">
+    <!-- <script src="./js/html-add.js">
       HTML要素の追加
+    </script> -->
+    <script src="./js/button-operation.js">
+      ボタンの操作
     </script>
   </body>
 </html>
