イベントの監視 #1

--- a/beginner/study/dom-practice/index.html
+++ b/beginner/study/dom-practice/index.html
@@ -40,8 +40,11 @@
     <!-- <script src="./js/html-add.js">
       HTML要素の追加
     </script> -->
-    <script src="./js/button-operation.js">
+    <!-- <script src="./js/button-operation.js">
       ボタンの操作
+    </script> -->
+    <script src="./js/event.js">
+      イベントの監視
     </script>
   </body>
 </html>
