jQueryの読み込み #3

--- a/beginner/study/jquery-practice/index.html
+++ b/beginner/study/jquery-practice/index.html
@@ -31,6 +31,8 @@
       <button id="js-btn" class="btn">クリック</button>
     </section>
 
+    <!-- jQueryの読み込み -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/index.js"></script>
   </body>
 </html>
