--- a/beginner/study/jquery-practice/index.html
+++ b/beginner/study/jquery-practice/index.html
@@ -33,6 +33,6 @@
 
     <!-- jQueryの読み込み -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./js/index.js"></script>
+    <script src="./js/rule.js"></script>
   </body>
 </html>
