HTML要素の指定（セレクタ）

--- a/beginner/study/jquery-practice/index.html
+++ b/beginner/study/jquery-practice/index.html
@@ -33,6 +33,11 @@
 
     <!-- jQueryの読み込み -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-    <script src="./js/rule.js"></script>
+    <!-- <script src="./js/rule.js">
+      基本記述のrule
+    </script> -->
+    <script src="./js/selector-.js">
+      セレクタの指定方法
+    </script>
   </body>
 </html>
