メソッドを使った要素の指定 #3

--- a/beginner/study/jquery-practice/index.html
+++ b/beginner/study/jquery-practice/index.html
@@ -16,10 +16,10 @@
       <p class="text">1日1題のステップで身につけるWEBスキル</p>
       <p class="text">JavaScript学習中</p>
       <p class="text">jQuery学習中</p>
-      <!-- <div class="children">
+      <div class="children">
         <p class="text grandchild">孫要素A</p>
         <p class="text grandchild">孫要素B</p>
-      </div> -->
+      </div>
       <div id="js-btn-wrap">
         <a
           href="https://www.daily-trial.com/"
@@ -36,8 +36,11 @@
     <!-- <script src="./js/rule.js">
       基本記述のrule
     </script> -->
-    <script src="./js/selector-.js">
+    <!-- <script src="./js/selector.js">
       セレクタの指定方法
+    </script> -->
+    <script src="./js/selector-method.js">
+      メソッドを使った要素の指定
     </script>
   </body>
 </html>
