メソッドとパラメーターについて #3

--- a/beginner/study/jquery-practice/index.html
+++ b/beginner/study/jquery-practice/index.html
@@ -39,8 +39,11 @@
     <!-- <script src="./js/selector.js">
       セレクタの指定方法
     </script> -->
-    <script src="./js/selector-method.js">
+    <!-- <script src="./js/selector-method.js">
       メソッドを使った要素の指定
+    </script> -->
+    <script src="./js/methods-and-parameters.js">
+      メソッドとパラメーター
     </script>
   </body>
 </html>
