メソッドチェーンについて #3

--- a/beginner/study/jquery-practice/index.html
+++ b/beginner/study/jquery-practice/index.html
@@ -42,8 +42,11 @@
     <!-- <script src="./js/selector-method.js">
       メソッドを使った要素の指定
     </script> -->
-    <script src="./js/methods-and-parameters.js">
+    <!-- <script src="./js/methods-and-parameters.js">
       メソッドとパラメーター
+    </script> -->
+    <script src="./js/method-chain.js">
+      メソッドチェーンについて
     </script>
   </body>
 </html>
