イベントの監視について #3

--- a/beginner/study/jquery-practice/index.html
+++ b/beginner/study/jquery-practice/index.html
@@ -45,8 +45,9 @@
     <!-- <script src="./js/methods-and-parameters.js">
       メソッドとパラメーター
     </script> -->
-    <script src="./js/method-chain.js">
+    <!-- <script src="./js/method-chain.js">
       メソッドチェーンについて
-    </script>
+    </script> -->
+    <script src="./js/event.js"></script>
   </body>
 </html>
