レイアウトシフト対策 #7

--- a/beginner/projects/jquery-practical-tasks/index.html
+++ b/beginner/projects/jquery-practical-tasks/index.html
@@ -41,7 +41,12 @@
     <header class="header">
       <div class="header-inner">
         <h1 class="header-logo">
-          <img src="./img/logo.svg" alt="Sweet Delight" />
+          <img
+            src="./img/logo.svg"
+            alt="Sweet Delight"
+            width="200"
+            height="31"
+          />
         </h1>
         <nav class="header-nav">
           <ul class="header-nav-list">
@@ -82,6 +87,8 @@
         <img
           src="./img/sp/fv.png"
           alt="素材の美味しさをそのままに Sweet Delight"
+          width="750"
+          height="1100"
         />
       </picture>
     </div>
@@ -94,7 +101,13 @@
           <span class="section-heading-sub">ー 当店について ー</span>
         </h2>
         <div class="about-contents">
-          <img src="./img/about.png" alt="" class="about-img" />
+          <img
+            src="./img/about.png"
+            alt=""
+            class="about-img"
+            width="467"
+            height="315"
+          />
           <div class="about-text-contents">
             <p class="about-text">
               当店では、素材の持つ美味しさや風味を最大限に生かし、シンプルでありながらも、素材の良さを引き出すこだわりのスイーツを提供しています。
@@ -118,7 +131,12 @@
           <ul class="menu-list">
             <li id="recommend" class="menu-item">
               <div class="menu-img">
-                <img src="./img/menu1.png" alt="おすすめ ストロベリーケーキ" />
+                <img
+                  src="./img/menu1.png"
+                  alt="おすすめ ストロベリーケーキ"
+                  width="634"
+                  height="476"
+                />
               </div>
               <div class="menu-text-contents">
                 <h3 class="menu-name">
@@ -130,7 +148,12 @@
             </li>
             <li id="new" class="menu-item">
               <div class="menu-img">
-                <img src="./img/menu2.png" alt="新発売 ブルーベリーケーキ" />
+                <img
+                  src="./img/menu2.png"
+                  alt="新発売 ブルーベリーケーキ"
+                  width="634"
+                  height="476"
+                />
               </div>
               <div class="menu-text-contents">
                 <h3 class="menu-name">
@@ -142,7 +165,12 @@
             </li>
             <li id="limitedtime" class="menu-item">
               <div class="menu-img">
-                <img src="./img/menu3.png" alt="おすすめ チョコレートケーキ" />
+                <img
+                  src="./img/menu3.png"
+                  alt="おすすめ チョコレートケーキ"
+                  width="634"
+                  height="476"
+                />
               </div>
               <div class="menu-text-contents">
                 <h3 class="menu-name">
@@ -183,7 +211,12 @@
     <footer class="footer">
       <div class="footer-inner">
         <div class="footer-logo">
-          <img src="./img/logo.svg" alt="Sweet Delight" />
+          <img
+            src="./img/logo.svg"
+            alt="Sweet Delight"
+            width="200"
+            height="31"
+          />
         </div>
         <p class="footer-text">ー 各SNS更新中 ー</p>
         <ul class="footer-nav-list">
@@ -193,7 +226,13 @@
               target="_blank"
               class="footer-nav-link"
             >
-              <img src="./img/icon-instagram.png" alt="" class="sns-img" />
+              <img
+                src="./img/icon-instagram.png"
+                alt=""
+                class="sns-img"
+                width="112"
+                height="112"
+              />
               <p class="footer-nav-link-text">メニューご案内</p>
             </a>
           </li>
@@ -203,7 +242,13 @@
               target="_blank"
               class="footer-nav-link"
             >
-              <img src="./img/icon-youtube.png" alt="" class="sns-img" />
+              <img
+                src="./img/icon-youtube.png"
+                alt=""
+                class="sns-img"
+                width="112"
+                height="112"
+              />
               <p class="footer-nav-link-text">制作のウラガワ</p>
             </a>
           </li>
@@ -213,7 +258,13 @@
               target="_blank"
               class="footer-nav-link"
             >
-              <img src="./img/icon-twitter.png" alt="" class="sns-img" />
+              <img
+                src="./img/icon-twitter.png"
+                alt=""
+                class="sns-img"
+                width="112"
+                height="112"
+              />
               <p class="footer-nav-link-text">お店の混雑状況</p>
             </a>
           </li>
