TOPへ戻るボタンの実装 #7

--- a/beginner/projects/jquery-practical-tasks/index.html
+++ b/beginner/projects/jquery-practical-tasks/index.html
@@ -275,6 +275,8 @@
       </div>
     </footer>
 
+    <button class="top-back js-top-back">TOP</button>
+
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
     <script src="./js/index.js"></script>
   </body>
