モーダルで画像の拡大表示の実装 #7

--- a/beginner/projects/jquery-practical-tasks/index.html
+++ b/beginner/projects/jquery-practical-tasks/index.html
@@ -122,6 +122,7 @@
 
     <!-- Menuセクション -->
     <section id="menu" class="menu">
+      <div class="menu-modal-bg"></div>
       <div class="inner">
         <h2 class="section-heading">
           <span class="section-heading-main">Menu</span>
@@ -130,7 +131,7 @@
         <div class="menu-contents">
           <ul class="menu-list">
             <li id="recommend" class="menu-item">
-              <div class="menu-img">
+              <div class="menu-img js-menu-img">
                 <img
                   src="./img/menu1.png"
                   alt="おすすめ ストロベリーケーキ"
@@ -147,7 +148,7 @@
               </div>
             </li>
             <li id="new" class="menu-item">
-              <div class="menu-img">
+              <div class="menu-img js-menu-img">
                 <img
                   src="./img/menu2.png"
                   alt="新発売 ブルーベリーケーキ"
@@ -166,6 +167,7 @@
             <li id="limitedtime" class="menu-item">
               <div class="menu-img">
                 <img
+                  class="js-menu-img"
                   src="./img/menu3.png"
                   alt="おすすめ チョコレートケーキ"
                   width="634"
