制作の準備  #16

--- a/beginner/projects/sweet-delight-sass-change/index.html
+++ b/beginner/projects/sweet-delight-sass-change/index.html
@@ -32,8 +32,8 @@
     />
 
     <!-- styles -->
-    <!-- <link rel="stylesheet" href="./css/reset-bk.css" /> -->
-    <!-- <link rel="stylesheet" href="./css/style-bk.css" /> -->
+    <link rel="stylesheet" href="./css/reset.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <!-- / styles -->
   </head>
   <body>
