metaデータの設定 #18

--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+
+    <!-- noindex -->
+    <meta name="”robots”" content="”noindex”" />
+
+    <!-- site desc -->
+    <title>ポートフォリオサイト</title>
+    <meta
+      name="description"
+      content="NOBUのポートフォリオサイトです。【Webサイトの制作】&nbsp;/&nbsp;【Webサイトの修正】&nbsp;/&nbsp;【コーディングに関するお問い合わせ】&nbsp;などお気軽にご相談ください。"
+    />
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100..900&family=Oswald:wght@200..700&display=swap"
+      rel="stylesheet"
+    />
+
+    <!-- style -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
