:sparkles: ドロワーの開閉機能の実装 #18

--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -22,7 +22,7 @@
       rel="stylesheet"
     />
 
-    <!-- style -->
+    <!-- Original Style -->
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
@@ -30,7 +30,9 @@
       <header class="header">
         <div class="header__container">
           <div class="header__logo">Nobu's<br />Portfolio</div>
-          <button class="header__menu-button">Menu</button>
+          <button id="js-button-drawer" class="header__menu-button">
+            Menu
+          </button>
 
           <div id="js-drawer" class="header__contents">
             <nav class="header__nav">
@@ -182,7 +184,10 @@
       </header>
     </div>
 
+    <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+
+    <!-- Original Script -->
     <script src="./js/index.js"></script>
   </body>
 </html>
