--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -182,6 +182,23 @@
           </div>
         </div>
       </header>
+
+      <main class="main">
+        <div class="fv">
+          <picture class="fv__img">
+            <source media="(min-width: 768px)" srcset="./img/img_fv.png" />
+            <img src="./img/sp/img_fv.png" alt="" width="750" height="1100" />
+          </picture>
+          <div class="fv__contents">
+            <h1 class="fv__heading">
+              <span class="fv__heading-main">Web Corder -</span>
+              <span class="fv__heading-sub"
+                >ご覧いただきありがとうございます。<br />WEBコーダーをしているNobuと申します。</span
+              >
+            </h1>
+          </div>
+        </div>
+      </main>
     </div>
 
     <!-- jQuery -->
