:lipstick: Serviceセクションの追加 #18

--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -198,6 +198,50 @@
             </h1>
           </div>
         </div>
+
+        <section id="section" class="section service">
+          <div class="section__inner">
+            <h2 class="section__head">
+              <span class="section__head-main">Service -</span>
+              <span class="section__head-sub">提供サービス</span>
+            </h2>
+            <p class="section__lead-text">
+              行っているサービス内容です。
+              【Webサイトの制作】&nbsp;/&nbsp;【Webサイトの修正】&nbsp;/&nbsp;【コーディングに関するお問い合わせ】&nbsp;などお気軽にご相談ください。
+            </p>
+            <div class="section__contents">
+              <ul class="service__list">
+                <li class="service__item">
+                  <div class="service__item-img">
+                    <img src="./img/img_service1.svg" alt="" />
+                  </div>
+                  <h3 class="service__item-name">ホームページ制作</h3>
+                  <p class="service__item-text">
+                    ご要望に応じて柔軟にご提案させていただきます。目的に合ったホームページを一緒に作り上げていきましょう！
+                  </p>
+                </li>
+                <li class="service__item">
+                  <div class="service__item-img">
+                    <img src="./img/img_service2.svg" alt="" />
+                  </div>
+                  <h3 class="service__item-name">ホームページ修正</h3>
+                  <p class="service__item-text">
+                    テキストの変更や表示崩れなど、ホームページのちょっとしたお困りごとに対応いたします。
+                  </p>
+                </li>
+                <li class="service__item">
+                  <div class="service__item-img">
+                    <img src="./img/img_service3.svg" alt="" />
+                  </div>
+                  <h3 class="service__item-name">ホームページについての相談</h3>
+                  <p class="service__item-text">
+                    【Webサイトの制作】&nbsp;/&nbsp;【Webサイトの修正】&nbsp;/&nbsp;【コーディングに関するお問い合わせ】&nbsp;などお気軽にご相談ください。
+                  </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
 
