--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -199,7 +199,7 @@
           </div>
         </div>
 
-        <section id="section" class="section service">
+        <section id="service" class="section service">
           <div class="section__inner">
             <h2 class="section__head">
               <span class="section__head-main">Service -</span>
@@ -237,6 +237,47 @@
                   <p class="service__item-text">
                     【Webサイトの制作】&nbsp;/&nbsp;【Webサイトの修正】&nbsp;/&nbsp;【コーディングに関するお問い合わせ】&nbsp;などお気軽にご相談ください。
                   </p>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </section>
+
+        <section id="works" class="section works">
+          <div class="section__inner">
+            <h2 class="section__head">
+              <span class="section__head-main">Works -</span>
+              <span class="section__head-sub">実績紹介</span>
+            </h2>
+            <p class="section__lead-text">
+              これまで制作したWebサイトです。当サイトも自ら制作しています。
+            </p>
+            <div class="section__contents">
+              <ul class="works__list">
+                <li class="works__item">
+                  <div class="works__item-img">
+                    <img src="./img/img_works1.jpg" alt="" />
+                  </div>
+                  <h3 class="works__item-name">サイトA</h3>
+                  <a href="#" class="works__item-link">詳しく見る</a>
+                </li>
+                <li class="works__item">
+                  <div class="works__item-img">
+                    <img src="./img/img_works2.jpg" alt="" />
+                  </div>
+                  <h3 class="works__item-name">サイトB</h3>
+                  <a href="#" class="works__item-link" target="_blank"
+                    >詳しく見る</a
+                  >
+                </li>
+                <li class="works__item">
+                  <div class="works__item-img">
+                    <img src="./img/img_works3.jpg" alt="" />
+                  </div>
+                  <h3 class="works__item-name">サイトC</h3>
+                  <a href="#" class="works__item-link" target="_blank"
+                    >詳しく見る</a
+                  >
                 </li>
               </ul>
             </div>
