:lipstick: aboutセクションの追加 #18

--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -283,6 +283,28 @@
             </div>
           </div>
         </section>
+
+        <section id="about" class="section about">
+          <div class="section__inner">
+            <div class="about__container">
+              <div class="about__img">
+                <img src="./img/img_about.png" alt="" />
+              </div>
+              <div class="about__text-contents">
+                <h2 class="section__head">
+                  <span class="section__head-main">About -</span>
+                  <span class="section__head-sub">自己紹介</span>
+                </h2>
+                <p class="about__text">
+                  私についての自己紹介です。私についての自己紹介です。私についての自己紹介です。私についての自己紹介です。
+                </p>
+                <p class="about__text">
+                  私についての自己紹介です。私についての自己紹介です。私についての自己紹介です。私についての自己紹介です。
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
 
