:lipstick: flowセクションの追加　#18

--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -258,14 +258,16 @@
                   <div class="works__item-img">
                     <img src="./img/img_works1.jpg" alt="" />
                   </div>
-                  <h3 class="works__item-name">サイトA</h3>
+                  <h3 class="works__item-name">ポートフォリオサイト</h3>
                   <a href="#" class="works__item-link">詳しく見る</a>
                 </li>
                 <li class="works__item">
                   <div class="works__item-img">
                     <img src="./img/img_works2.jpg" alt="" />
                   </div>
-                  <h3 class="works__item-name">サイトB</h3>
+                  <h3 class="works__item-name">
+                    スイーツ店公式サイト（サンプル）
+                  </h3>
                   <a href="#" class="works__item-link" target="_blank"
                     >詳しく見る</a
                   >
@@ -274,7 +276,7 @@
                   <div class="works__item-img">
                     <img src="./img/img_works3.jpg" alt="" />
                   </div>
-                  <h3 class="works__item-name">サイトC</h3>
+                  <h3 class="works__item-name">家具のサブスクLP（サンプル）</h3>
                   <a href="#" class="works__item-link" target="_blank"
                     >詳しく見る</a
                   >
@@ -296,12 +298,70 @@
                   <span class="section__head-sub">自己紹介</span>
                 </h2>
                 <p class="about__text">
-                  私についての自己紹介です。私についての自己紹介です。私についての自己紹介です。私についての自己紹介です。
+                  1989年生まれ、東京在住。大学卒業後、メーカーの営業職を経験しました。現在は、家庭と両立しながらWeb制作を行っております。
                 </p>
                 <p class="about__text">
-                  私についての自己紹介です。私についての自己紹介です。私についての自己紹介です。私についての自己紹介です。
+                  趣味は、旅行、写真を撮ること、カフェ巡りです。
                 </p>
               </div>
+            </div>
+          </div>
+        </section>
+
+        <section id="flow" class="section flow">
+          <div class="section__inner">
+            <h2 class="section__head">
+              <span class="section__head-main">Work flow -</span>
+              <span class="section__head-sub">制作の流れ</span>
+            </h2>
+
+            <p class="section__lead-text">
+              ご相談〜納品までの大まかな流れです。状況に応じて柔軟に対応いたします。
+            </p>
+
+            <div class="section__contents">
+              <ol class="flow__list">
+                <li class="flow__item">
+                  <p class="flow__item-num">1</p>
+                  <div class="flow__item-img">
+                    <img src="./img/img_flow1.svg" alt="" />
+                  </div>
+                  <h3 class="flow__item-name">ご相談・お見積り</h3>
+                  <p class="flow__item-text">
+                    要件や納期、予算などお気軽にご相談ください。対応内容に応じてお見積りをお送りいたします。
+                  </p>
+                </li>
+                <li class="flow__item">
+                  <p class="flow__item-num">2</p>
+                  <div class="flow__item-img">
+                    <img src="./img/img_flow2.svg" alt="" />
+                  </div>
+                  <h3 class="flow__item-name">コーディング</h3>
+                  <p class="flow__item-text">
+                    デザインカンプを元にコーディングを行います。コーディング後は品質チェックを行い調整します。
+                  </p>
+                </li>
+                <li class="flow__item">
+                  <p class="flow__item-num">3</p>
+                  <div class="flow__item-img">
+                    <img src="./img/img_flow3.svg" alt="" />
+                  </div>
+                  <h3 class="flow__item-name">確認</h3>
+                  <p class="flow__item-text">
+                    お客様にコーディングしたサイトをご確認頂きます。不足部分の修正と対応を行います。
+                  </p>
+                </li>
+                <li class="flow__item">
+                  <p class="flow__item-num">4</p>
+                  <div class="flow__item-img">
+                    <img src="./img/img_flow4.svg" alt="" />
+                  </div>
+                  <h3 class="flow__item-name">納品</h3>
+                  <p class="flow__item-text">
+                    コーディング後のファイル一式を納品いたします。本番サーバーへのアップロードも対応可能です。
+                  </p>
+                </li>
+              </ol>
             </div>
           </div>
         </section>
