:lipstick: messageセクションの追加 #18

--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -365,6 +365,25 @@
             </div>
           </div>
         </section>
+
+        <section id="message" class="section message">
+          <div class="section__inner">
+            <div class="message__container">
+              <div class="message__img">
+                <img src="./img/img_message.png" alt="" />
+              </div>
+              <div class="message__text-contents">
+                <h2 class="section__head">
+                  <span class="section__head-main">Message -</span>
+                  <span class="section__head-sub">ご依頼をお考えの方へ</span>
+                </h2>
+                <p class="message__text">
+                  静的なHTMLコーディングからWordPress化まで対応可能です。デザインカンプの意図をしっかりと理解した上で、迅速、丁寧な対応でコーディング業務をサポートいたします。
+                </p>
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
     </div>
 
