:lipstick: 各デバイスの表示確認と修正 #18

--- a/beginner/projects/simple-portfolio-site/index.html
+++ b/beginner/projects/simple-portfolio-site/index.html
@@ -95,7 +95,7 @@
                   </a>
                 </li>
                 <li class="header__nav-item">
-                  <a href="#work-flow" class="header__nav-link button">
+                  <a href="#flow" class="header__nav-link button">
                     <span class="button__icon">
                       <svg
                         width="16"
@@ -386,16 +386,15 @@
         </section>
 
         <div class="page-bottom">
-          <div class="page-bottom__item page-bottom__item--contact">
+          <div
+            id="contact"
+            class="page-bottom__item page-bottom__item--contact"
+          >
             <h2 class="section__head section__head--center">
               <span class="section__head-main">Contact -</span>
               <span class="section__head-sub">お問い合わせ</span>
             </h2>
-            <a
-              href=""
-              class="page-bottom__button button button--border"
-              target="_blank"
-            >
+            <a href="#" class="page-bottom__button button button--border">
               <span class="button__icon">
                 <svg
                   width="20"
@@ -413,16 +412,15 @@
               <span class="button__text">Contact -</span>
             </a>
           </div>
-          <div class="page-bottom__item page-bottom__item--twitter">
+          <div
+            id="twitter"
+            class="page-bottom__item page-bottom__item--twitter"
+          >
             <h2 class="section__head section__head--center">
               <span class="section__head-main">Twitter -</span>
               <span class="section__head-sub">ツイッター</span>
             </h2>
-            <a
-              href=""
-              class="page-bottom__button button button--border"
-              target="_blank"
-            >
+            <a href="#" class="page-bottom__button button button--border">
               <span class="button__icon">
                 <svg
                   width="20"
